[gd_scene load_steps=52 format=3 uid="uid://cvs3x1cpeslar"]

[ext_resource type="Script" path="res://enemy.gd" id="1_bwifn"]
[ext_resource type="Texture2D" uid="uid://tgx6bvsjq7sy" path="res://Spirtes/Boss_attack/sprite_00.png" id="2_bkvsq"]
[ext_resource type="Texture2D" uid="uid://bfyddhlr7nhyl" path="res://Spirtes/Boss_attack/sprite_01.png" id="3_c72au"]
[ext_resource type="Texture2D" uid="uid://dm742c1bfxvfv" path="res://Spirtes/Boss_attack/sprite_02.png" id="4_qpllt"]
[ext_resource type="Texture2D" uid="uid://cc3t8gcgl162l" path="res://Spirtes/Boss_attack/sprite_03.png" id="5_17qav"]
[ext_resource type="Texture2D" uid="uid://dbe0sfqgk22dg" path="res://Spirtes/Boss_attack/sprite_11.png" id="6_hcoy2"]
[ext_resource type="Texture2D" uid="uid://cukt2jpfy7680" path="res://Spirtes/Boss_attack/sprite_04.png" id="7_b67a0"]
[ext_resource type="Texture2D" uid="uid://c05v2ja8o2nh8" path="res://Spirtes/Boss_attack/sprite_05.png" id="8_0kau4"]
[ext_resource type="Texture2D" uid="uid://bs5e70pce7ei8" path="res://Spirtes/Boss_attack/sprite_13.png" id="9_f0mbv"]
[ext_resource type="Texture2D" uid="uid://ddtv4tpr404mq" path="res://Spirtes/Boss_attack/sprite_14.png" id="10_ur633"]
[ext_resource type="Texture2D" uid="uid://tnpoceud0s7t" path="res://Spirtes/Boss_attack/sprite_06.png" id="11_lbmly"]
[ext_resource type="Texture2D" uid="uid://cy81nddvoh2w8" path="res://Spirtes/Boss_attack/sprite_07.png" id="12_l0vyh"]
[ext_resource type="Texture2D" uid="uid://q3v4loqcoua2" path="res://Spirtes/Boss_attack/sprite_08.png" id="13_obal7"]
[ext_resource type="Texture2D" uid="uid://crjer54gbv866" path="res://Spirtes/Boss_attack/sprite_09.png" id="14_eml8v"]
[ext_resource type="Texture2D" uid="uid://cs8pc1spuv2bf" path="res://Spirtes/Boss_attack/sprite_10.png" id="15_sqlei"]
[ext_resource type="Texture2D" uid="uid://dxdxoj2u46qyk" path="res://Spirtes/Boss_attack/sprite_12.png" id="16_s50vq"]
[ext_resource type="Texture2D" uid="uid://y4knrlk2dj85" path="res://Spirtes/Boss_Idle/sprite_0.png" id="17_vvesq"]
[ext_resource type="Texture2D" uid="uid://c50satxgr01ee" path="res://Spirtes/Boss_Idle/sprite_1.png" id="18_3oept"]
[ext_resource type="Texture2D" uid="uid://bduv5hhmqqwei" path="res://Spirtes/Boss_Idle/sprite_2.png" id="19_hvd6c"]
[ext_resource type="Texture2D" uid="uid://bgss3mj3hcgm6" path="res://Spirtes/Boss_Idle/sprite_3.png" id="20_tyjfe"]
[ext_resource type="Texture2D" uid="uid://cnth4rcaucwb" path="res://Spirtes/Boss_Idle/sprite_4.png" id="21_ererv"]
[ext_resource type="Texture2D" uid="uid://cgps3yrk6351q" path="res://Spirtes/Boss_Idle/sprite_5.png" id="22_tc4vw"]
[ext_resource type="Texture2D" uid="uid://b8sruvd5jwc8p" path="res://Spirtes/BossLeft/sprite_0.png" id="23_6drrp"]
[ext_resource type="Texture2D" uid="uid://cfk8n3yeys70i" path="res://Spirtes/BossLeft/sprite_1.png" id="24_alaw3"]
[ext_resource type="Texture2D" uid="uid://tbgbx14qu40v" path="res://Spirtes/BossLeft/sprite_2.png" id="25_ifiat"]
[ext_resource type="Texture2D" uid="uid://bvob77tst3a62" path="res://Spirtes/BossRight/sprite_0.png" id="26_dtaxe"]
[ext_resource type="Texture2D" uid="uid://micx8q1baa4t" path="res://Spirtes/BossRight/sprite_1.png" id="27_nv0kk"]
[ext_resource type="Texture2D" uid="uid://bu25gda2dm5gk" path="res://Spirtes/BossRight/sprite_2.png" id="28_bhk25"]
[ext_resource type="Texture2D" uid="uid://dgi02j33xv5g6" path="res://Spirtes/BossRight/sprite_3.png" id="29_3142m"]
[ext_resource type="Texture2D" uid="uid://dtkf3kjkevt7e" path="res://MosseDeath/Moss Detah00.png" id="30_ui8cp"]
[ext_resource type="Texture2D" uid="uid://bo7wjhnl583tj" path="res://MosseDeath/Moss Detah01.png" id="31_wroej"]
[ext_resource type="Texture2D" uid="uid://diay3koc4178j" path="res://MosseDeath/Moss Detah02.png" id="32_wtryi"]
[ext_resource type="Texture2D" uid="uid://hh1fh2fned0b" path="res://MosseDeath/Moss Detah03.png" id="33_13lu5"]
[ext_resource type="Texture2D" uid="uid://c23vd3sn0hp2m" path="res://MosseDeath/Moss Detah04.png" id="34_oaod1"]
[ext_resource type="Texture2D" uid="uid://ccfp5y8tkle6s" path="res://MosseDeath/Moss Detah05.png" id="35_vy4lh"]
[ext_resource type="Texture2D" uid="uid://hbllxtok4oa0" path="res://MosseDeath/Moss Detah06.png" id="36_b7whc"]
[ext_resource type="Texture2D" uid="uid://bvpe4rpwp88a" path="res://MosseDeath/Moss Detah07.png" id="37_m3d3o"]
[ext_resource type="Texture2D" uid="uid://begaa5ehchjrk" path="res://MosseDeath/Moss Detah08.png" id="38_4f6pc"]
[ext_resource type="Texture2D" uid="uid://cmujeje6616cg" path="res://MosseDeath/Moss Detah09.png" id="39_pdai1"]
[ext_resource type="Texture2D" uid="uid://bi7pwmaxjqoqy" path="res://MosseDeath/Moss Detah10.png" id="40_oekc4"]
[ext_resource type="Texture2D" uid="uid://b020r0s75c6e" path="res://MosseDeath/Moss Detah11.png" id="41_7g5bb"]
[ext_resource type="Texture2D" uid="uid://caolkuo7ryeiq" path="res://MosseDeath/Moss Detah12.png" id="42_a4yd3"]
[ext_resource type="Texture2D" uid="uid://upqpq0av8r3c" path="res://MosseDeath/Moss Detah13.png" id="43_nibfk"]
[ext_resource type="Texture2D" uid="uid://cwoqxa4lgr8ue" path="res://MosseDeath/Moss Detah14.png" id="44_fuy6n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuweb"]
size = Vector2(578, 369)

[sub_resource type="CircleShape2D" id="CircleShape2D_uql7a"]
radius = 880.145

[sub_resource type="SpriteFrames" id="SpriteFrames_e2n65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bkvsq")
}, {
"duration": 1.0,
"texture": ExtResource("3_c72au")
}, {
"duration": 1.0,
"texture": ExtResource("4_qpllt")
}, {
"duration": 1.0,
"texture": ExtResource("5_17qav")
}, {
"duration": 1.0,
"texture": ExtResource("6_hcoy2")
}, {
"duration": 1.0,
"texture": ExtResource("7_b67a0")
}, {
"duration": 1.0,
"texture": ExtResource("8_0kau4")
}, {
"duration": 1.0,
"texture": ExtResource("9_f0mbv")
}, {
"duration": 1.0,
"texture": ExtResource("10_ur633")
}, {
"duration": 1.0,
"texture": ExtResource("11_lbmly")
}, {
"duration": 1.0,
"texture": ExtResource("12_l0vyh")
}, {
"duration": 1.0,
"texture": ExtResource("13_obal7")
}, {
"duration": 1.0,
"texture": ExtResource("14_eml8v")
}, {
"duration": 1.0,
"texture": ExtResource("15_sqlei")
}, {
"duration": 1.0,
"texture": ExtResource("16_s50vq")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_vvesq")
}, {
"duration": 1.0,
"texture": ExtResource("18_3oept")
}, {
"duration": 1.0,
"texture": ExtResource("19_hvd6c")
}, {
"duration": 1.0,
"texture": ExtResource("20_tyjfe")
}, {
"duration": 1.0,
"texture": ExtResource("21_ererv")
}, {
"duration": 1.0,
"texture": ExtResource("22_tc4vw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_6drrp")
}, {
"duration": 1.0,
"texture": ExtResource("24_alaw3")
}, {
"duration": 1.0,
"texture": ExtResource("25_ifiat")
}, {
"duration": 1.0,
"texture": ExtResource("25_ifiat")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_dtaxe")
}, {
"duration": 1.0,
"texture": ExtResource("27_nv0kk")
}, {
"duration": 1.0,
"texture": ExtResource("28_bhk25")
}, {
"duration": 1.0,
"texture": ExtResource("29_3142m")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_ui8cp")
}, {
"duration": 1.0,
"texture": ExtResource("31_wroej")
}, {
"duration": 1.0,
"texture": ExtResource("32_wtryi")
}, {
"duration": 1.0,
"texture": ExtResource("33_13lu5")
}, {
"duration": 1.0,
"texture": ExtResource("34_oaod1")
}, {
"duration": 1.0,
"texture": ExtResource("35_vy4lh")
}, {
"duration": 1.0,
"texture": ExtResource("36_b7whc")
}, {
"duration": 1.0,
"texture": ExtResource("37_m3d3o")
}, {
"duration": 1.0,
"texture": ExtResource("38_4f6pc")
}, {
"duration": 1.0,
"texture": ExtResource("39_pdai1")
}, {
"duration": 1.0,
"texture": ExtResource("40_oekc4")
}, {
"duration": 1.0,
"texture": ExtResource("41_7g5bb")
}, {
"duration": 1.0,
"texture": ExtResource("42_a4yd3")
}, {
"duration": 1.0,
"texture": ExtResource("43_nibfk")
}, {
"duration": 1.0,
"texture": ExtResource("44_fuy6n")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdakc"]
size = Vector2(2048.2, 1768.63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqv55"]
size = Vector2(1896.5, 1765)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcc01"]
size = Vector2(379.45, 145.765)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yi7hw"]
size = Vector2(183, 204)

[node name="enemy" type="CharacterBody2D"]
z_index = -100
collision_layer = 4
collision_mask = 4
script = ExtResource("1_bwifn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 70.5)
shape = SubResource("RectangleShape2D_cuweb")
debug_color = Color(0, 0.592157, 0.74902, 0.419608)
metadata/_edit_lock_ = true

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(53, 32)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(2, -5)
scale = Vector2(2.24, 2.08)
shape = SubResource("CircleShape2D_uql7a")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e2n65")
animation = &"death"
frame_progress = 0.835516

[node name="right_side" type="Area2D" parent="."]
position = Vector2(-366, -90)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_side"]
position = Vector2(1371.86, 119.313)
scale = Vector2(0.96, 2.12)
shape = SubResource("RectangleShape2D_tdakc")
metadata/_edit_lock_ = true

[node name="left_side" type="Area2D" parent="."]
position = Vector2(-366, -90)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_side"]
position = Vector2(-583.75, 120.5)
scale = Vector2(1, 2.2)
shape = SubResource("RectangleShape2D_oqv55")
metadata/_edit_lock_ = true

[node name="attack_range" type="Area2D" parent="."]
position = Vector2(2, 0)
scale = Vector2(1.37186, 1.35579)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
position = Vector2(-2.18681, 52.7368)
scale = Vector2(1.12957, 1.91776)
shape = SubResource("RectangleShape2D_lcc01")
metadata/_edit_lock_ = true

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(9, -18)
collision_layer = 3072
collision_mask = 3072

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-137.5, -39)
shape = SubResource("RectangleShape2D_yi7hw")

[node name="hpbar" type="ProgressBar" parent="."]
offset_left = -255.0
offset_top = -328.0
offset_right = 280.0
offset_bottom = -301.0
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="right_side" to="." method="_on_right_side_body_entered"]
[connection signal="body_entered" from="left_side" to="." method="_on_left_side_body_entered"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="value_changed" from="hpbar" to="." method="_on_hpbar_value_changed"]
